- Imported java.beans packages - Refactored goToNextLevel - Changed updateActors() method from lambda expression to reference - Added PropertyChangeSupport private field - Refactored LevelParent constructor